--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GO_VERSION: "1.24.1"
+  GO_VERSION: "1.24.4"
   REGISTRY: ghcr.io
   IMAGE_NAME: shugur-network/relay
 
@@ -220,6 +220,7 @@ jobs:
           staticcheck ./...
 
           # Run govulncheck for known vulnerabilities
+          echo "Running vulnerability check..."
           go install golang.org/x/vuln/cmd/govulncheck@latest
           govulncheck ./...
 
