--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GO_VERSION: "1.24.1"
+  GO_VERSION: "1.24.4"
   REGISTRY: ghcr.io
   IMAGE_NAME: shugur-network/relay
 
@@ -36,12 +36,12 @@ jobs:
       code: ${{ steps.filter.outputs.code }}
       docs: ${{ steps.filter.outputs.docs }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
           fetch-depth: 0
       - name: Paths filter
         id: filter
-        uses: dorny/paths-filter@v3
+        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
         with:
           filters: |
             code:
@@ -60,19 +60,29 @@ jobs:
     runs-on: ubuntu-latest
     needs: [changes]
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5.0.2
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
 
+      - name: Cache golangci-lint
+        uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
+        with:
+          path: ~/.cache/golangci-lint
+          key: ${{ runner.os }}-golangci-lint-${{ hashFiles('**/go.sum') }}-${{ hashFiles('.golangci.yml', '.golangci.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-golangci-lint-${{ hashFiles('**/go.sum') }}-
+            ${{ runner.os }}-golangci-lint-
+
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: golangci/golangci-lint-action@aaa42aa0628b4ae2578232a66b541047968fac86 # v6.1.0
         with:
           version: latest
           args: --timeout=5m
+          skip-cache: true  # We handle caching manually above
 
   test:
     name: Test
@@ -80,50 +90,100 @@ jobs:
     needs: [changes]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5.0.2
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
+
+      - name: Cache test dependencies and build cache
+        if: ${{ needs.changes.outputs.code == 'true' }}
+        uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-test-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/*_test.go') }}
+          restore-keys: |
+            ${{ runner.os }}-go-test-${{ hashFiles('**/go.sum') }}-
+            ${{ runner.os }}-go-test-
 
       - name: Download dependencies
         if: ${{ needs.changes.outputs.code == 'true' }}
         run: go mod download
 
-      - name: Start CockroachDB
+      - name: Start CockroachDB (CI-optimized)
         if: ${{ needs.changes.outputs.code == 'true' }}
         run: |
           docker run -d \
             --name cockroach \
             -p 26257:26257 \
             -p 8080:8080 \
+            --memory=512m \
+            --cpus=0.5 \
             cockroachdb/cockroach:v24.1.5 \
-            start-single-node --insecure
+            start-single-node --insecure --max-sql-memory=50% --cache=128MB
 
-          # Wait for CockroachDB to be ready
-          timeout 60s bash -c 'until docker exec cockroach /cockroach/cockroach sql --insecure --execute="SELECT 1;" > /dev/null 2>&1; do sleep 2; done'
-
+          # Wait for CockroachDB to be ready with optimized timeout
+          timeout 45s bash -c 'until docker exec cockroach /cockroach/cockroach sql --insecure --execute="SELECT 1;" > /dev/null 2>&1; do sleep 2; done'
+          
+          echo "CockroachDB is ready for testing"
           # Database will be created automatically by the relay application
 
-      - name: Run tests
+      - name: Run tests with retry mechanism
         if: ${{ needs.changes.outputs.code == 'true' }}
         run: |
-          go test -v -race -coverprofile=coverage.out ./...
+          # Run tests with retry for flakiness resilience
+          for attempt in 1 2 3; do
+            echo "Test attempt $attempt..."
+            if go test -v -race -p 4 -coverprofile=coverage.out -timeout=5m ./...; then
+              echo "Tests passed on attempt $attempt"
+              break
+            elif [ $attempt -eq 3 ]; then
+              echo "Tests failed after 3 attempts"
+              exit 1
+            else
+              echo "Test attempt $attempt failed, retrying in 10 seconds..."
+              sleep 10
+            fi
+          done
         env:
           SHUGUR_DB_HOST: localhost
           SHUGUR_DB_PORT: 26257
           SHUGUR_DB_USER: root
           SHUGUR_DB_SSL_MODE: disable
 
+      - name: Run benchmarks for performance monitoring
+        if: ${{ needs.changes.outputs.code == 'true' }}
+        run: |
+          echo "Running performance benchmarks..."
+          go test -bench=. -benchmem -count=3 -run=^$ ./... > benchmarks.txt 2>&1 || true
+          
+          # Display benchmark results
+          if [ -f benchmarks.txt ] && [ -s benchmarks.txt ]; then
+            echo "Benchmark Results:"
+            cat benchmarks.txt | grep -E "(Benchmark|PASS|FAIL)" | head -20
+          else
+            echo "No benchmarks found or benchmarks failed to run"
+          fi
+
       - name: Upload coverage to Codecov
         if: ${{ needs.changes.outputs.code == 'true' }}
-        uses: codecov/codecov-action@v5
+        uses: codecov/codecov-action@e28ff129e5465c2c0dcc6f003fc735cb6ae0c673 # v5.0.4
         with:
           file: ./coverage.out
           flags: unittests
           name: codecov-umbrella
+
+      - name: Upload benchmark results
+        if: ${{ needs.changes.outputs.code == 'true' }}
+        uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4.4.0
+        with:
+          name: benchmark-results
+          path: benchmarks.txt
+          retention-days: 30
 
       - name: Docs-only change; skip tests
         if: ${{ needs.changes.outputs.code != 'true' }}
@@ -140,14 +200,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: [changes]
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5.0.2
         with:
           go-version: ${{ env.GO_VERSION }}
 
-      - name: Run Basic Security Checks
+      - name: Run comprehensive security checks
         run: |
           # Run go vet for basic security issues
           go vet ./...
@@ -158,6 +218,17 @@ jobs:
           # Run staticcheck for advanced static analysis
           go install honnef.co/go/tools/cmd/staticcheck@latest
           staticcheck ./...
+
+          # Run govulncheck for known vulnerabilities
+          echo "Running vulnerability check..."
+          go install golang.org/x/vuln/cmd/govulncheck@latest
+          govulncheck ./...
+
+          # Check for secrets and sensitive information
+          if command -v git >/dev/null 2>&1; then
+            echo "Scanning for potential secrets in code..."
+            git log --all --full-history -- "*.go" "*.yaml" "*.yml" "*.json" | grep -i -E "(password|secret|key|token|api)" | head -10 || true
+          fi
 
   build:
     name: Build (release artifacts)
@@ -174,7 +245,7 @@ jobs:
             goarch: arm64
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Validate SemVer and VERSION for releases
         if: github.event_name == 'release'
@@ -195,7 +266,7 @@ jobs:
           fi
 
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5.0.2
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
@@ -216,11 +287,11 @@ jobs:
             ./cmd
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4.4.0
         with:
           name: relay-${{ matrix.goos }}-${{ matrix.goarch }}
           path: dist/
-          retention-days: 30
+          retention-days: 7  # Reduced from 30 days for releases
 
   docker:
     name: Docker Build & Push (release)
@@ -233,13 +304,13 @@ jobs:
       packages: write
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@988b5a0280414f521da01fcc63a27aeeb4b104db # v3.6.1
 
       - name: Log in to Container Registry
-        uses: docker/login-action@v3
+        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3.3.0
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -263,7 +334,7 @@ jobs:
 
       - name: Extract metadata
         id: meta
-        uses: docker/metadata-action@v5
+        uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5.5.1
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
@@ -277,7 +348,7 @@ jobs:
         run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@5cd11c3a4ced054e52742c5fd54dca954e0edd85 # v6.7.0
         with:
           context: .
           file: ./docker/Dockerfile
@@ -303,7 +374,7 @@ jobs:
       packages: write
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Validate SemVer and VERSION for releases
         run: |
@@ -322,7 +393,7 @@ jobs:
           fi
 
       - name: Download build artifacts (relay-*)
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
           # Only fetch our binary artifacts, skip docker/buildx artifacts
           pattern: relay-*
@@ -390,7 +461,7 @@ jobs:
       # Docker images are built and pushed in the docker job (release)
 
       - name: Log in to Container Registry (read)
-        uses: docker/login-action@v3
+        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3.3.0
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -410,7 +481,7 @@ jobs:
           docker save "${IMAGE}:${TAG}" -o "release/containers/relay-${TAG}-linux-arm64.tar"
 
       - name: Upload release assets
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@c062e08bd532815e2082a85e87e3ef29c3e6d191 # v2.0.8
         with:
           files: |
             release/*
@@ -424,10 +495,10 @@ jobs:
     needs: [lint, test]
     if: github.event_name == 'pull_request'
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5.0.2
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
